package utils;

public interface Initializer {

     void Initialize(Object object);


}
