package utils;

public interface Refreshable {

    void refresh();

}
